format beberapa kode agar mudah di baca, menghilangkan scrollbar, fix achievement id, dan news ny belum selesai ;)

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -6,8 +6,14 @@
 @tailwind utilities;
 
 @layer base {
-  html {
-    font-family: serif;
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
   }
 
   button {
